# ur-agent

./: .gitignore  README.md
ai-agent-app/: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile.database  Dockerfile.redis  Dockerfile.synthetic  Makefile  Makefile.docker  README.md  code-assessment.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.synthetic.yml  docker-compose.yml  env.docker  env.production  nginx.conf  prometheus.yml  pyproject.toml  pytest.ini  render.yaml  run_tests.py  start-docker.sh  start.sh  start_server.py
ai-agent-app/docs/: README.md  docker-setup.md  phase5-external-services.md
ai-agent-app/docs/architecture/: phase2-implementation.md
ai-agent-app/docs/deployment/: docker-setup.md
ai-agent-app/docs/development/: setup-guide.md
ai-agent-app/env-templates/: env.development  env.example  env.production  env.synthetic.development  env.synthetic.production
ai-agent-app/examples/: phase2_demo.py  phase5_external_services_demo.py  resilience_demo.py
ai-agent-app/grafana/dashboards/: synthetic-agents.json
ai-agent-app/scripts/: __init__.py  colors.py  debug_production.py  deploy-production.sh  deploy.sh  format.py  initialize_transcripts.py  lint.py  migrate_database.py  setup.py  setup_docker.py  setup_phase2.py  start_minimal.py  startup.sh  startup_minimal.sh  startup_production.sh  startup_production_simple.sh  startup_simple.sh  test.py  verify_setup.py
ai-agent-app/src/ai_agent/: __init__.py  main.py  simple_main.py
ai-agent-app/src/ai_agent/api/: dependencies.py  error_handlers.py  middleware.py  openapi.py  rate_limiting.py
ai-agent-app/src/ai_agent/api/static/: index.html
ai-agent-app/src/ai_agent/api/v1/: __init__.py  agents.py  governance_evaluation.py  health.py  mcp_servers.py  messages.py  router.py  sessions.py  stakeholder_views.py  synthetic_agents.py  tools.py
ai-agent-app/src/ai_agent/api/validation/: __init__.py  synthetic_agents.py
ai-agent-app/src/ai_agent/api/websocket/: __init__.py  auth.py  connection_manager.py  endpoints.py  event_handlers.py  message_queue.py  router.py  synthetic_agents.py
ai-agent-app/src/ai_agent/config/: feature_flags.py  settings.py  stakeholder_views.py  synthetic_agents.py  transcript_processing.py
ai-agent-app/src/ai_agent/config/environments/: __init__.py  development.py  production.py  staging.py  testing.py
ai-agent-app/src/ai_agent/core/: dependency_container.py
ai-agent-app/src/ai_agent/core/agents/: __init__.py  persona_factory.py  persona_service.py  service.py  synthetic_representative.py
ai-agent-app/src/ai_agent/core/evaluation/: __init__.py  criteria_loader.py  evaluation_storage.py  governance_evaluator.py  models.py  report_generator.py
ai-agent-app/src/ai_agent/core/mcp/: service.py
ai-agent-app/src/ai_agent/core/messages/: service.py
ai-agent-app/src/ai_agent/core/sessions/: service.py
ai-agent-app/src/ai_agent/core/tools/: service.py
ai-agent-app/src/ai_agent/domain/: __init__.py  exceptions.py  knowledge_models.py  models.py
ai-agent-app/src/ai_agent/infrastructure/: __init__.py
ai-agent-app/src/ai_agent/infrastructure/database/: __init__.py  base.py  factory.py  memory.py  postgresql.py  redis.py
ai-agent-app/src/ai_agent/infrastructure/knowledge/: __init__.py  stakeholder_utils.py  transcript_processor.py  transcript_store.py
ai-agent-app/src/ai_agent/infrastructure/llm/: __init__.py  anthropic_client.py  base.py  error_handler.py  factory.py  google_client.py  mock_client.py  openai_client.py
ai-agent-app/src/ai_agent/infrastructure/mcp/: __init__.py  client.py  exceptions.py  integration.py  protocol.py  server_manager.py  tool_executor.py  tool_registry.py
ai-agent-app/src/ai_agent/infrastructure/secret_management/: __init__.py  aws_secrets.py  azure_keyvault.py  base.py  factory.py  gcp_secrets.py  local_secrets.py
ai-agent-app/src/ai_agent/observability/: __init__.py  synthetic_metrics.py
ai-agent-app/src/ai_agent/observability/health/: __init__.py  checker.py  endpoints.py  monitors.py
ai-agent-app/src/ai_agent/observability/logging/: __init__.py  config.py  correlation.py  formatters.py
ai-agent-app/src/ai_agent/observability/metrics/: __init__.py  collectors.py  custom_metrics.py  exporters.py
ai-agent-app/src/ai_agent/resilience/: README.md  __init__.py  exceptions.py  integration.py
ai-agent-app/src/ai_agent/security/: __init__.py  auth.py  authorization.py  encryption.py  middleware.py  secure_storage.py  validation.py
ai-agent-app/tests/: conftest.py
ai-agent-app/tests/integration/: conftest.py  test_deployment.py  test_end_to_end_workflow.py  test_governance_evaluation.py  test_persona_agents.py  test_stakeholder_views_integration.py  test_websocket_synthetic_agents.py
ai-agent-app/tests/integration/test_knowledge/: test_transcript_integration.py
ai-agent-app/tests/performance/: test_deployment.py  test_governance_evaluation.py  test_synthetic_agents_performance.py  test_system_performance.py
ai-agent-app/tests/performance/test_knowledge/: test_transcript_performance.py
ai-agent-app/tests/unit/: test_api_synthetic_agents.py  test_api_synthetic_agents_fixed.py  test_api_synthetic_agents_old.py  test_api_validation.py  test_circuit_breaker.py  test_configuration.py  test_governance_evaluation.py  test_health_checks.py  test_health_checks_simple.py  test_phase7_basic.py  test_retry_mechanisms.py  test_stakeholder_views_server.py  test_synthetic_agents.py  test_transcript_processing.py  test_validation_synthetic_agents.py
ai-agent-app/tests/unit/test_infrastructure/: test_secret_management.py
ai-agent-app/tests/unit/test_knowledge/: test_knowledge_models.py  test_transcript_processing.py  test_transcript_store.py
ai-agent-app/tests/unit/test_observability/: test_metrics.py
ai-agent-app/tests/unit/test_resilience/: test_circuit_breaker.py  test_health.py  test_retry.py
ai-agent-app/tests/unit/test_security/: test_auth.py  test_validation.py
ai-agent-app/tests/validation/: __init__.py  test_evidence_accuracy.py
(+71 files in other folders)
